Switch to project code and refactor project create logic

--- a/coldfront/components/site/templates/project/project_create_form.html
+++ b/coldfront/components/site/templates/project/project_create_form.html
@@ -19,6 +19,8 @@ Create Project
   {{ form.title|as_crispy_field }}
   {{ form.description|as_crispy_field }}
   {{ form.pi_username|as_crispy_field }}
+  {{ form.pi|as_crispy_field }}
+  {{ form.requestor|as_crispy_field }}
   <div class="mb-3" id="pi_search_accordion" style="display: none;">
     <p>
       This PI already has active projects. Please take a look and see if you can join one instead of creating a new one.
