--- a/coldfront/components/site/templates/portal/authorized_home.html
+++ b/coldfront/components/site/templates/portal/authorized_home.html
@@ -176,13 +176,13 @@
                   <p><strong>Project:</strong> {{ project.title|truncatechars:50 }}</p>
                 </div>
                 <div class="col px-0">
-                  <p><strong>Account Name:</strong> {{ project.slurm_account_name }}</p>
+                  <p><strong>Account Name:</strong> {{ project.project_code }}</p>
                 </div>
               </div>
             </div>
             <p><strong>Resources:</strong> {{ project.resources_with_slurm_accounts }}</p>
-            <p><strong>Add to Interactive Job Commands:</strong> srun -A {{ project.slurm_account_name }} &lt;commands&gt;</p>
-            <p><strong>Add to Batch Job Scripts:</strong> #SBATCH -A {{ project.slurm_account_name }}</p>
+            <p><strong>Add to Interactive Job Commands:</strong> srun -A {{ project.project_code }} &lt;commands&gt;</p>
+            <p><strong>Add to Batch Job Scripts:</strong> #SBATCH -A {{ project.project_code }}</p>
           </li>
         {% endfor %}
       </ul>
