--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -225,6 +225,41 @@ Allocation Detail
   {% include "service/reallms_api/reallms_api_key_div.html" %}
 {% endif %}
 
+{% if eulas %}
+<div class="card mb-3">
+  <div class="card-header">
+    <h3 class="d-inline"><i class="fas fa-info-circle" aria-hidden="true"></i> EULA Agreements </h3>
+  </div>
+  <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-bordered table-sm">
+          <thead>
+            <tr>
+              <th scope="col">Resource</th>
+              <th scope="col">EULA</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <a href="{% url 'resource-detail' res %}">{{res_obj}}</a><br>
+              </td>
+              <td>
+                {{eulas}}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        {% if user_in_allocation %}
+          <div class="d-inline-flex">
+              <a href="{% url 'allocation-review-eula' allocation.pk %}">Review EULA Agreement</a>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+  {% endif %}
+
 {% if attributes or attributes_with_usage or user_has_permissions %}
   <div class="card mb-3">
     <div class="card-header">
@@ -287,6 +322,7 @@ Allocation Detail
   </div>
 {% endif %}
 
+{% if not user_is_pending %}
 <!-- Start Allocation Change Requests -->
 {% if allocation_changes or allocation_changes_enabled %}
   <div class="card mb-3">
@@ -404,7 +440,9 @@ Allocation Detail
               {% endif %}
               {% if user.status.name == 'Active' %}
                 <td class="text-success"><strong>{{ user.status.name }}</strong></td>
-              {% elif user.status.name in 'Denied, Error, Expired' %}
+              {% elif user.status.name == 'PendingEULA' %}
+                <td class="text-info">{{ user.status.name }}</td>
+              {% elif user.status.name in 'Denied, Error, Expired, DeclinedEULA' %}
                 <td class="text-danger"><strong>{{ user.status.name }}</strong></td>
               {% else %}
                 <td class="text-primary"><strong>{{ user.status.name }}</strong></td>
@@ -483,13 +521,16 @@ Allocation Detail
     {% endif %}
   </div>
 </div>
+{% endif %}
+
+{{ guage_data|json_script:"guage-data" }}
 
 <script>
   $("#navbar-main > ul > li.active").removeClass("active");
   $("#navbar-project-menu").addClass("active");
 
   $(document).ready(function () {
-    var guage_data = {{ guage_data | safe }};
+    var guage_data = JSON.parse(document.getElementById('guage-data').textContent);
     drawGauges(guage_data);
 
     $('#allocation_change_table').DataTable({
