--- a/coldfront/components/site/templates/project/project_create_form.html
+++ b/coldfront/components/site/templates/project/project_create_form.html
@@ -23,8 +23,8 @@ Create Project
   {{ form.requestor|as_crispy_field }}
   <div class="mb-3" id="pi_search_accordion" style="display: none;">
     <p>
-      This PI already has active projects. Please take a look and see if you can join one instead of creating a new one.
-      Joining an existing project can reduce the number of project's your PI has to manage.
+      This PI has active projects. Please look and see if you can join one instead of creating a new one.
+      Joining an existing project reduces the number of projects your PI needs to manage.
     </p>
     <div class="card">
       <div class="card-header">
