--- a/coldfront/plugins/pi_search/templates/pi_search/pi_search.html
+++ b/coldfront/plugins/pi_search/templates/pi_search/pi_search.html
@@ -7,7 +7,7 @@
     </div>
     <div class="card-body">
       <p>
-        You can use the PI Search function to search for a project your PI is in and request to be added to it.
+        Search for your PI's project and request to be added to it.
       </p>
       <form id="pi_search_form" method="post">
         {{ form|crispy }}
