--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -166,7 +166,7 @@ Project Detail
         </a>
       </p>
     {% endif %}
-    <p class="card-text text-justify"><strong>Description: </strong>{{ project.description|linebreaks }}</p>
+    <p class="card-text text-justify"><strong>Description: </strong>{{ project.description|linebreaksbr }}</p>
     <p class="card-text text-justify"><strong>Project Type: </strong>{{ project.type.name }}</p>
     <p class="card-text text-justify"><strong>Project ID: </strong>{{ project.pk }}</p>
     <p class="card-text text-justify"><strong>Project Status: </strong>
