Remove | safe tags

--- a/coldfront/components/site/templates/allocation/allocation_renew.html
+++ b/coldfront/components/site/templates/allocation/allocation_renew.html
@@ -89,8 +89,10 @@ Renew Allocation
   </div>
 </div>
 
+{{ resource_eula|json_script:"resource_eula" }}
+
 <script>
-  var resource_eula = {{ resource_eula | safe }};
+  var resource_eula = JSON.parse(document.getElementById('resource_eula').textContent);
 
   $("#navbar-main > ul > li.active").removeClass("active");
   $("#navbar-project-menu").addClass("active");
