--- a/coldfront/plugins/academic_analytics/templates/academic_analytics/academic_analytics_div.html
+++ b/coldfront/plugins/academic_analytics/templates/academic_analytics/academic_analytics_div.html
@@ -25,7 +25,7 @@
       $('#publication_search_spinner').html('');
       $('#academics_analytics_form').html(data);
     },
-    error: function(data) {
+    error: function() {
       $('#publication_search_spinner').html('');
       $('#academics_analytics_form').html(
         '<div class="alert alert-warning">\
