--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -83,12 +83,12 @@ Allocation Detail
   </div>
   <div class="card-footer">
     {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 %}
+    <div class="text-warning d-inline">
       <strong>
-        <div class="text-warning d-inline">
-          <i class="far fa-clock" aria-hidden="true"></i>
-          Expires in {{allocation.expires_in}} day{{allocation.expires_in|pluralize}}
-        </div>
+        <i class="far fa-clock" aria-hidden="true"></i>
+        Expires in {{allocation.expires_in}} day{{allocation.expires_in|pluralize}}
       </strong>
+    </div>
     {% endif %}
     <div class="float-right">
       <a class="btn btn-primary mr-1" href="{% url 'allocation-list' %}">Return to Allocation List</a>
@@ -353,7 +353,6 @@ Allocation Detail
                     {% else %}
                       <td class="text-primary">{{ change_request.status.name }}</td>
                     {% endif %}
-                    </td>
                     {% if change_request.notes %}
                       <td>{{change_request.notes}}</td>
                     {% else %}
@@ -523,15 +522,15 @@ Allocation Detail
 </div>
 {% endif %}
 
-{{ guage_data|json_script:"guage-data" }}
+{{ gauge_data|json_script:"guage-data" }}
 
 <script>
   $("#navbar-main > ul > li.active").removeClass("active");
   $("#navbar-project-menu").addClass("active");
 
   $(document).ready(function () {
-    var guage_data = JSON.parse(document.getElementById('guage-data').textContent);
-    drawGauges(guage_data);
+    var gauge_data = JSON.parse(document.getElementById('gauge_data').textContent);
+    drawGauges(gauge_data);
 
     $('#allocation_change_table').DataTable({
       lengthMenu: [5, 10, 20, 50, 100],
