Fix boolean variables

--- a/coldfront/components/site/templates/project/add_user_search_results.html
+++ b/coldfront/components/site/templates/project/add_user_search_results.html
@@ -166,7 +166,7 @@
   var current_num_managers = JSON.parse(document.getElementById('current_num_managers').textContent);
   var max_managers = JSON.parse(document.getElementById('max_managers').textContent);
   var matches = JSON.parse(document.getElementById('matches').textContent);
-  var after_project_creation = JSON.parse(document.getElementById('after_project_creation').textContent);
+  var after_project_creation = JSON.parse(document.getElementById('after_project_creation').textContent) === 'true';
   var user_accounts = JSON.parse(document.getElementById('user_accounts').textContent);
   var resource_accounts = JSON.parse(document.getElementById('resource_accounts').textContent);
   var all_accounts = JSON.parse(document.getElementById('all_accounts').textContent);
