--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -657,7 +657,7 @@ Project Detail
 
 {{ display_modal|json_script:"display_modal" }}
 {{ display_project_created_modal|json_script:"display_project_created_modal" }}
-{{ gauge_data|json_script:"guage_data" }}
+{{ gauge_data|json_script:"gauge_data" }}
 
 <script>
   var display_modal = JSON.parse(document.getElementById('display_modal').textContent) === 'true';
