--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -359,12 +359,12 @@ Project Detail
               <td class="text-nowrap">
                 <div class="text-center">
                   <a
-                    class="btn {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 %}btn-warning{% else %}btn-primary{% endif %}"
+                    class="btn {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 and allocation.status.name == 'Active' %}btn-warning{% else %}btn-primary{% endif %}"
                     href="{% url 'allocation-detail' allocation.pk %}"
                     role="button"
                   >
                     <i class="far fa-folder-open" aria-hidden="true"></i> Details <br>
-                    {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 %}
+                    {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 and allocation.status.name == 'Active' %}
                       <div style="margin-top: -10px;">
                         <small><small>Expires in {{allocation.expires_in}} day{{allocation.expires_in|pluralize}}</small></small>
                       </div>
@@ -722,7 +722,7 @@ Project Detail
       "order": [[ 1, "desc" ]]
     });
 
-    $('[data-toggle="popover"]').popover(); 
+    $('[data-toggle="popover"]').popover();
 
     $('#allocation_table').DataTable({
       'aoColumnDefs': [{
